--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -13,6 +13,7 @@ on:
           - test_sort_customer
           - test_delete
 
+
 permissions:
   contents: read
   pages: write
@@ -25,59 +26,39 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Получить всю историю коммитов
-
-      - name: Setup Python
+      - name: setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-
-      - name: Install system dependencies
+      - name: Install Firefox
         run: |
           sudo apt-get update
-          sudo apt-get install -y firefox xvfb libdbus-glib-1-2
-
+          sudo apt-get install -y firefox
+          echo "Firefox version: $(firefox --version)"
       - name: Install Geckodriver
         run: |
           wget https://github.com/mozilla/geckodriver/releases/download/v0.34.0/geckodriver-v0.34.0-linux64.tar.gz
-          tar -xvzf geckodriver*
+          tar -xvzf geckodriver*.tar.gz
           chmod +x geckodriver
           sudo mv geckodriver /usr/local/bin/
           geckodriver --version
-
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest allure-pytest
-
-      - name: Verify test files exist
-        run: |
-          ls -la Test/
-          [ -f "Test/Test_add_customer.py" ] || { echo "Test file not found!"; exit 1; }
-
-      - name: Run test_create_customer
+      - name: install dependencies
+        run: pip install -r requirements.txt
+      - name: test_create_customer
         if: "github.event.inputs.deployment_target == 'test_create_customer'"
-        run: |
-          xvfb-run -a pytest Test/Test_add_customer.py::test_create_customer --alluredir=allure-results -v
-
-      - name: Run test_sort_customer
+        run: pytest Test/Test_add_customer.py::test_create_customer --alluredir=allure-results
+      - name: test_sort_customer
         if: "github.event.inputs.deployment_target == 'test_sort_customer'"
-        run: |
-          xvfb-run -a pytest Test/Test_sort_customer.py::test_sort_by_first_name --alluredir=allure-results -v
-
-      - name: Run test_delete
-        if: "github.event.inputs.deployment_target == 'test_delete'"
-        run: |
-          xvfb-run -a pytest Test/Test_delete.py::test_delete --alluredir=allure-results -v
-
-      - name: Upload test results
+        run: pytest Test/Test_sort_customer.py::test_sort_by_first_name --alluredir=allure-results
+      - name: test_delete
+        if: "github.event.inputs.deployment_target == 'test_delete_customer'"
+        run: pytest Test/Test_delete.py::test_delete_customers --alluredir=allure-results
+      - name: Store results
         uses: actions/upload-artifact@v4
-        if: always()
         with:
           name: allure-results
-          path: allure-results
+          path:
+            allure-results
           retention-days: 1
 
   generate-report:
@@ -89,29 +70,16 @@ jobs:
         with:
           distribution: 'microsoft'
           java-version: '17'
-
-      - name: Install Allure
-        run: |
-          sudo wget https://github.com/allure-framework/allure2/releases/download/2.29.0/allure-2.29.0.tgz
-          sudo tar -zxvf allure-2.29.0.tgz -C /opt/
-          sudo ln -s /opt/allure-2.29.0/bin/allure /usr/bin/allure
-          allure --version
-
-      - name: Download test results
+      - run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.29.0/allure-2.29.0.tgz && sudo tar -zxvf allure-2.29.0.tgz -C /opt/ && sudo ln -s /opt/allure-2.29.0/bin/allure /usr/bin/allure
+      - name: Download all workflow run artifacts
         uses: actions/download-artifact@v4
-        with:
-          name: allure-results
-          path: allure-results
-
-      - name: Generate Allure report
-        run: |
-          allure generate -c allure-results -o _site
-
-      - name: Upload report artifact
+      - run: allure generate -c allure-results -o _site
+      - name: Store generated report
         uses: actions/upload-artifact@v4
         with:
           name: _site
-          path: _site
+          path:
+            _site
           retention-days: 1
 
   publish-report:
@@ -119,17 +87,10 @@ jobs:
     needs: generate-report
     name: Report publication
     steps:
-      - name: Download report artifact
+      - name: Download all workflow run artifacts
         uses: actions/download-artifact@v4
-        with:
-          name: _site
-          path: _site
-
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
-        with:
-          path: _site
-
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
