--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -46,13 +46,13 @@ jobs:
         run: pip install -r requirements.txt
       - name: test_create_customer
         if: "github.event.inputs.deployment_target == 'test_create_customer'"
-        run: pytest Test/Test_add_customer.py::test_create_customer --alluredir=allure-results
+        run: pytest test/test_add_customer.py::test_create_customer --alluredir=allure-results
       - name: test_sort_customer
         if: "github.event.inputs.deployment_target == 'test_sort_customer'"
-        run: pytest Test/Test_sort_customer.py::test_sort_by_first_name --alluredir=allure-results
+        run: pytest test/test_sort_customer.py::test_sort_by_first_name --alluredir=allure-results
       - name: test_delete
         if: "github.event.inputs.deployment_target == 'test_delete_customer'"
-        run: pytest Test/Test_delete.py::test_delete_customers --alluredir=allure-results
+        run: pytest test/test_wdelete.py::test_delete_customers --alluredir=allure-results
       - name: Store results
         uses: actions/upload-artifact@v4
         with:
