--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -1,10 +1,10 @@
-name: Automated Tests
+name: Automated test www.globalsqa.com
 
 on:
   workflow_dispatch:
     inputs:
       deployment_target:
-        description: Choose test target
+        description: Choose target
         required: true
         default: test_create_customer
         type: choice
@@ -13,12 +13,19 @@ on:
           - test_sort_customer
           - test_delete
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 20  # Увеличиваем общий таймаут
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -28,7 +35,8 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y firefox xvfb libdbus-glib-1-2 libgtk-3-0
+          sudo apt-get install -y firefox xvfb libdbus-glib-1-2
+          echo "Firefox version: $(firefox --version)"
 
       - name: Install latest Geckodriver
         run: |
@@ -37,38 +45,90 @@ jobs:
           tar -xvzf geckodriver*.tar.gz
           chmod +x geckodriver
           sudo mv geckodriver /usr/local/bin/
+          geckodriver --version
 
       - name: Install Python dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install selenium webdriver-manager pytest allure-pytest
+          pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Start Xvfb
         run: |
-          Xvfb :99 -screen 0 1920x1080x24 -ac +extension GLX +render -noreset > /dev/null 2>&1 &
+          Xvfb :99 -screen 0 1920x1080x24 -ac +extension GLX +render -noreset &> /dev/null &
           echo "DISPLAY=:99" >> $GITHUB_ENV
 
-      - name: Run tests
+      - name: Run tests with increased timeout
         env:
           DISPLAY: ":99"
-          MOZ_HEADLESS: 1
-          MOZ_HEADLESS_WIDTH: 1920
-          MOZ_HEADLESS_HEIGHT: 1080
+          SELENIUM_TIMEOUT: 300
         run: |
           case "${{ github.event.inputs.deployment_target }}" in
             test_create_customer)
-              pytest test/test_add_customer.py -v --alluredir=allure-results
+              pytest test/test_add_customer.py::test_create_customer --alluredir=allure-results
               ;;
             test_sort_customer)
-              pytest test/test_sort_customer.py -v --alluredir=allure-results
+              pytest test/test_sort_customer.py::test_sort_by_first_name --alluredir=allure-results
               ;;
             test_delete_customer)
-              pytest test/test_wdelete.py -v --alluredir=allure-results
+              pytest test/test_wdelete.py::test_delete --alluredir=allure-results
               ;;
           esac
 
-      - uses: actions/upload-artifact@v4
+      - name: Store test results
         if: always()
+        uses: actions/upload-artifact@v4
         with:
           name: allure-results
           path: allure-results
+          retention-days: 1
+
+  generate-report:
+    runs-on: ubuntu-latest
+    needs: test
+    if: always()
+    name: Generate Allure report
+    steps:
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'microsoft'
+          java-version: '17'
+
+      - name: Install Allure
+        run: |
+          sudo wget -q https://github.com/allure-framework/allure2/releases/download/2.29.0/allure-2.29.0.tgz
+          sudo tar -zxvf allure-2.29.0.tgz -C /opt/
+          sudo ln -s /opt/allure-2.29.0/bin/allure /usr/bin/allure
+
+      - name: Download test results
+        uses: actions/download-artifact@v4
+        with:
+          name: allure-results
+          path: allure-results
+
+      - name: Generate Allure report
+        run: allure generate -c allure-results -o _site
+
+      - name: Store generated report
+        uses: actions/upload-artifact@v4
+        with:
+          name: _site
+          path: _site
+          retention-days: 1
+
+  publish-report:
+    runs-on: ubuntu-latest
+    needs: generate-report
+    if: always()
+    name: Publish report to GitHub Pages
+    steps:
+      - name: Download report artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: _site
+          path: _site
+
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
