--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -51,6 +51,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
+          pip install selenium==4.30.0 webdriver-manager pytest allure-pytest
 
       - name: Start Xvfb
         run: |
