--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -4,14 +4,12 @@ on:
   workflow_dispatch:
     inputs:
       deployment_target:
-        description: Choose target
+        description: Choose target (ignored, runs all tests in parallel)
         required: true
-        default: test_create_customer
+        default: all
         type: choice
         options:
-          - test_create_customer
-          - test_sort_customer
-          - test_delete
+          - all
 
 permissions:
   contents: read
@@ -19,96 +17,70 @@ permissions:
   id-token: write
 
 jobs:
-  test:
+  test_create_customer:
     runs-on: ubuntu-latest
-    timeout-minutes: 20  # Увеличиваем общий таймаут
-
+    name: Run test_create_customer
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y firefox xvfb libdbus-glib-1-2
-          echo "Firefox version: $(firefox --version)"
-
-      - name: Install latest Geckodriver
-        run: |
-          GECKODRIVER_VERSION=$(curl -s https://api.github.com/repos/mozilla/geckodriver/releases/latest | grep tag_name | cut -d '"' -f 4)
-          wget https://github.com/mozilla/geckodriver/releases/download/${GECKODRIVER_VERSION}/geckodriver-${GECKODRIVER_VERSION}-linux64.tar.gz
-          tar -xvzf geckodriver*.tar.gz
-          chmod +x geckodriver
-          sudo mv geckodriver /usr/local/bin/
-          geckodriver --version
-
-      - name: Install Python dependencies
-        run: |
-          pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install selenium==4.30.0 webdriver-manager pytest allure-pytest
-
-      - name: Start Xvfb
-        run: |
-          Xvfb :99 -screen 0 1920x1080x24 -ac +extension GLX +render -noreset &> /dev/null &
-          echo "DISPLAY=:99" >> $GITHUB_ENV
-
-      - name: Run tests with increased timeout
-        env:
-          DISPLAY: ":99"
-          SELENIUM_TIMEOUT: 300
-        run: |
-          case "${{ github.event.inputs.deployment_target }}" in
-            test_create_customer)
-              pytest test/test_add_customer.py::test_create_customer --alluredir=allure-results
-              ;;
-            test_sort_customer)
-              pytest test/test_sort_customer.py::test_sort_by_first_name --alluredir=allure-results
-              ;;
-            test_delete_customer)
-              pytest test/test_wdelete.py::test_delete --alluredir=allure-results
-              ;;
-          esac
-
-      - name: Store test results
-        if: always()
+      - name: Install Chrome
+        run: sudo apt-get install google-chrome-stable
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      - name: Run test_create_customer
+        run: pytest tests/test_add_customer.py::test_create_customer --alluredir=allure-results
+      - name: Upload Allure results
         uses: actions/upload-artifact@v4
         with:
-          name: allure-results
+          name: allure-results-test_create_customer
           path: allure-results
           retention-days: 1
 
+  test_sort_customer:
+    runs-on: ubuntu-latest
+    name: Run test_sort_customer
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+      - name: Install Chrome
+        run: sudo apt-get install google-chrome-stable
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      - name: Run test_sort_customer
+        run: pytest tests/test_sort_customer.py::test_sort_by_first_name --alluredir=allure-results
+      - name: Upload Allure results
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-results-test_sort_customer
+          path: allure-results
+          retention-days: 1
+
+
   generate-report:
     runs-on: ubuntu-latest
-    needs: test
-    if: always()
-    name: Generate Allure report
+    needs: [test_create_customer, test_sort_customer]
+    name: Generate report
     steps:
       - uses: actions/setup-java@v4
         with:
           distribution: 'microsoft'
           java-version: '17'
-
-      - name: Install Allure
-        run: |
-          sudo wget -q https://github.com/allure-framework/allure2/releases/download/2.29.0/allure-2.29.0.tgz
-          sudo tar -zxvf allure-2.29.0.tgz -C /opt/
-          sudo ln -s /opt/allure-2.29.0/bin/allure /usr/bin/allure
-
-      - name: Download test results
+      - run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.29.0/allure-2.29.0.tgz && sudo tar -zxvf allure-2.29.0.tgz -C /opt/ && sudo ln -s /opt/allure-2.29.0/bin/allure /usr/bin/allure
+      - name: Download all workflow run artifacts
         uses: actions/download-artifact@v4
         with:
-          name: allure-results
           path: allure-results
-
-      - name: Generate Allure report
-        run: allure generate -c allure-results -o _site
-
+          pattern: allure-results-*
+          merge-multiple: true
+      - run: allure generate -c allure-results -o _site
       - name: Store generated report
         uses: actions/upload-artifact@v4
         with:
@@ -119,17 +91,12 @@ jobs:
   publish-report:
     runs-on: ubuntu-latest
     needs: generate-report
-    if: always()
-    name: Publish report to GitHub Pages
+    name: Report publication
     steps:
-      - name: Download report artifact
+      - name: Download all workflow run artifacts
         uses: actions/download-artifact@v4
-        with:
-          name: _site
-          path: _site
-
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
-
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
